ionos_dev/billing/payment-scheduler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-scheduler-deployment
  namespace: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: payment-scheduler
      app.kubernetes.io/name: payment-scheduler
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: payment-scheduler
        app.kubernetes.io/name: payment-scheduler
    spec:
      containers:
        - name: payment-scheduler-container
          image: production.eng.it:8433/dome/payment-scheduler:2.0.6
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"      
            limits:
              memory: 512Mi
              cpu: "1"
          livenessProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 30
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 10
